// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dock snapshots > Denied 1`] = `
<div>
  <div
    data-dock-state="denied"
    data-role="dock"
  >
    <div
      data-mode="voice"
      data-role="dock-controls"
    >
      <button
        aria-label="Talk"
        aria-pressed="false"
        data-dock-state="denied"
        data-role="dock-talk"
        type="button"
      >
        <span
          aria-hidden="true"
          data-role="dock-mic"
        >
          <span
            data-role="dock-mic-orb"
          />
          <span
            data-role="dock-mic-capsule"
          />
          <span
            data-role="dock-mic-arc"
          />
          <span
            data-role="dock-mic-stem"
          />
        </span>
        <span
          data-role="dock-label"
        >
          Tap to enable mic
        </span>
      </button>
      <button
        aria-label="Type a message"
        data-role="dock-keyboard"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="22"
        >
          <rect
            height="11"
            rx="2.5"
            width="19"
            x="2.5"
            y="4.5"
          />
          <path
            d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
          />
          <path
            d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
          />
          <path
            d="M8.5 13.6h7"
          />
          <path
            d="M8.8 21l3.2-3 3.2 3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dock snapshots > Keyboard mode: typed field replaces the transcript, mic gives way to X + send 1`] = `
<div>
  <div
    data-dock-state="keyboard"
    data-role="dock"
  >
    <div
      data-dock-state="keyboard"
      data-role="dock-transcript"
    >
      <textarea
        aria-label="Message"
        data-role="dock-input"
        placeholder="Type a message…"
        rows="1"
        style="height: 0px;"
      />
    </div>
    <div
      data-mode="keyboard"
      data-role="dock-controls"
    >
      <button
        aria-label="Close keyboard"
        data-role="dock-cancel"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <button
        aria-label="Send"
        data-role="dock-send"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M12 4l-8 8h5v8h6v-8h5z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dock snapshots > Listening with a live transcript (settled + ghosted tail + caret) 1`] = `
<div>
  <div
    data-dock-state="listening"
    data-role="dock"
  >
    <div
      data-dock-state="listening"
      data-role="dock-transcript"
    >
      <span
        data-role="dock-settled"
      >
        Ship the login screen.
      </span>
      <span
        data-ghost="true"
        data-role="dock-tail"
      >
        and wire up
      </span>
      <span
        aria-hidden="true"
        data-role="dock-caret"
      >
        |
      </span>
    </div>
    <div
      data-mode="voice"
      data-role="dock-controls"
    >
      <button
        aria-label="Send"
        data-role="dock-send"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M12 4l-8 8h5v8h6v-8h5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Talk"
        aria-pressed="true"
        data-dock-state="listening"
        data-role="dock-talk"
        type="button"
      >
        <span
          aria-hidden="true"
          data-role="dock-mic"
        >
          <span
            data-role="dock-mic-orb"
          />
          <span
            data-role="dock-mic-capsule"
          />
          <span
            data-role="dock-mic-arc"
          />
          <span
            data-role="dock-mic-stem"
          />
        </span>
        <span
          data-role="dock-label"
        >
          Listening…
        </span>
      </button>
      <button
        aria-label="Cancel"
        data-role="dock-cancel"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dock snapshots > Listening with settled ink only (send + X flank the mic) 1`] = `
<div>
  <div
    data-dock-state="listening"
    data-role="dock"
  >
    <div
      data-dock-state="listening"
      data-role="dock-transcript"
    >
      <span
        data-role="dock-settled"
      >
        Ship the login screen.
      </span>
      <span
        aria-hidden="true"
        data-role="dock-caret"
      >
        |
      </span>
    </div>
    <div
      data-mode="voice"
      data-role="dock-controls"
    >
      <button
        aria-label="Send"
        data-role="dock-send"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M12 4l-8 8h5v8h6v-8h5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Talk"
        aria-pressed="true"
        data-dock-state="listening"
        data-role="dock-talk"
        type="button"
      >
        <span
          aria-hidden="true"
          data-role="dock-mic"
        >
          <span
            data-role="dock-mic-orb"
          />
          <span
            data-role="dock-mic-capsule"
          />
          <span
            data-role="dock-mic-arc"
          />
          <span
            data-role="dock-mic-stem"
          />
        </span>
        <span
          data-role="dock-label"
        >
          Listening…
        </span>
      </button>
      <button
        aria-label="Cancel"
        data-role="dock-cancel"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dock snapshots > Paused 1`] = `
<div>
  <div
    data-dock-state="paused"
    data-role="dock"
  >
    <div
      data-mode="voice"
      data-role="dock-controls"
    >
      <button
        aria-label="Talk"
        aria-pressed="false"
        data-dock-state="paused"
        data-role="dock-talk"
        type="button"
      >
        <span
          aria-hidden="true"
          data-role="dock-mic"
        >
          <span
            data-role="dock-mic-orb"
          />
          <span
            data-role="dock-mic-capsule"
          />
          <span
            data-role="dock-mic-arc"
          />
          <span
            data-role="dock-mic-stem"
          />
        </span>
        <span
          data-role="dock-label"
        >
          Tap to talk
        </span>
      </button>
      <button
        aria-label="Type a message"
        data-role="dock-keyboard"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="22"
        >
          <rect
            height="11"
            rx="2.5"
            width="19"
            x="2.5"
            y="4.5"
          />
          <path
            d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
          />
          <path
            d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
          />
          <path
            d="M8.5 13.6h7"
          />
          <path
            d="M8.8 21l3.2-3 3.2 3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dock snapshots > Retry with an un-committed transcript preserved (09 §5) 1`] = `
<div>
  <div
    data-dock-state="retry"
    data-role="dock"
  >
    <div
      data-dock-state="retry"
      data-role="dock-transcript"
    >
      <span
        data-ghost="true"
        data-role="dock-tail"
      >
        half a thought
      </span>
    </div>
    <div
      data-mode="voice"
      data-role="dock-controls"
    >
      <button
        aria-label="Send"
        data-role="dock-send"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M12 4l-8 8h5v8h6v-8h5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Talk"
        aria-pressed="false"
        data-dock-state="retry"
        data-role="dock-talk"
        type="button"
      >
        <span
          aria-hidden="true"
          data-role="dock-mic"
        >
          <span
            data-role="dock-mic-orb"
          />
          <span
            data-role="dock-mic-capsule"
          />
          <span
            data-role="dock-mic-arc"
          />
          <span
            data-role="dock-mic-stem"
          />
        </span>
        <span
          data-role="dock-label"
        >
          Tap to retry
        </span>
      </button>
      <button
        aria-label="Cancel"
        data-role="dock-cancel"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;
